Added console logging to upstart script.

--- a/install/deb/jukeberry.conf
+++ b/install/deb/jukeberry.conf
@@ -8,6 +8,7 @@
 ## To start service manually:
 ## service jukeberry start
 ##
+console log
 exec /usr/local/bin/start_jukeberry_server
 start on startup
 
