Updated settings view for nicer ui wrt alwayson.

--- a/config/jukeberry.example.conf
+++ b/config/jukeberry.example.conf
@@ -1,10 +1,10 @@
 [GLOBAL]
 DEBUG=True
-THREADED=True
+THREADED=False
 SSL=False
 PLAYER=omxplayer
 #PLAYER=mpg123
-LIB=/var/media/music/
+LIB=/var/media/music/Tomahawk/
 
 [SSL]
 SSL_CRT=/path/to/crt.crt
