Added alwayson text to index.

--- a/config/jukeberry.example.conf
+++ b/config/jukeberry.example.conf
@@ -4,7 +4,7 @@ THREADED=False
 SSL=False
 PLAYER=omxplayer
 #PLAYER=mpg123
-LIB=/var/media/music/Tomahawk/
+LIB=/var/media/music/
 
 [SSL]
 SSL_CRT=/path/to/crt.crt
