fixed python3 issue in random

--- a/config/jukeberry.example.conf
+++ b/config/jukeberry.example.conf
@@ -4,7 +4,7 @@ THREADED=False
 SSL=False
 PLAYER=omxplayer
 #PLAYER=mpg123
-LIB=/var/media/music/
+LIB=/opt/music/
 
 [SSL]
 SSL_CRT=/path/to/crt.crt
@@ -13,7 +13,7 @@ SSL_KEY=/path/to/key.key
 [WEB]
 # Put all web API config here
 HOST=0.0.0.0
-PORT=5000
+PORT=5001
 
 [DOCS]
 DIR=/src/jukeberry/docs/_build/html
