--- a/install/ansible/roles/jukeberry/tasks/main.yml
+++ b/install/ansible/roles/jukeberry/tasks/main.yml
@@ -103,4 +103,8 @@
   lineinfile:
     path: '/home/{{ user }}/.config/lxsession/LXDE-pi/autostart'
     line: '@chromium-browser --kiosk http://localhost:5000/'
+    create: 'yes'
+    mode: '0600'
+    owner: '{{ user }}'
+    group: '{{ user }}'
 
